Change content in hello.html

--- a/hello.html
+++ b/hello.html
@@ -12,8 +12,9 @@
     Distinctio adipisci aperiam impedit, voluptates laboriosam vero ducimus dolorum corrupti molestiae, dolore commodi omnis eos dolorem voluptas odio quas. Sint sunt dolor et minima saepe unde rerum tempora impedit ipsam.
     Repellendus vel temporibus assumenda eligendi cupiditate eaque, ut itaque amet non magnam autem. Quis odio asperiores impedit doloremque eos ducimus architecto alias nemo. Sint, deleniti dolores quibusdam error itaque maiores?
     Voluptates neque temporibus rem, labore tempora sed numquam libero. Deserunt delectus necessitatibus incidunt ratione voluptatum saepe doloremque, officiis odit nisi, explicabo vitae ad voluptate possimus eius sapiente! Vitae, rem perferendis.
-    Id, qui aut amet cum, cumque velit veniam quisquam, in animi eligendi officia? Sapiente eligendi sed recusandae odio itaque suscipit, accusantium magni minus reprehenderit perferendis voluptate rerum non. Mollitia, incidunt?
-    Ipsa cupiditate nostrum harum minima, illum optio? Tempora quaerat harum reprehenderit, tenetur laborum animi officiis eos possimus minus blanditiis architecto velit ratione minima consectetur iure veritatis numquam. Ea, aut totam.
+    This is a new added line
     </p>
+
+    <p>I made this changes </p>
 </body>
 </html>
